<resources>
    <string name="app_name">Drywall Tally</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="new_job">New Job</string>
    <string name="new_item_hint">Description</string>
    <string name="half_regular">1/2\u0022 Lite &amp; Stretch</string>
    <string name="ceilings">Ceilings</string>
    <string name="fire">Fire Resistant</string>
    <string name="five_eight_regular">5/8\u0022 Regular &amp; Stretch</string>
    <string name="five_eight_regular_no_stretch">5/8\u0022 Regular</string>
    <string name="stretch_mold">Stretch</string>
    <string name="regular_half_8">Regular 8\'</string>
    <string name="regular_half_10">Regular 10\'</string>
    <string name="eight_feet">8\'</string>
    <string name="nine_feet">9\'</string>
    <string name="ten_feet">10\'</string>
    <string name="twelve_feet">12\'</string>
    <string name="fourteen_feet">14\'</string>
    <string name="sixteen_feet">16\'</string>
    <string name="ceiling_eight_feet">c8\'</string>
    <string name="ceiling_nine_feet">c9\'</string>
    <string name="ceiling_ten_feet">c10\'</string>
    <string name="ceiling_twelve_feet">c12\'</string>
    <string name="ceiling_fourteen_feet">c14\'</string>
    <string name="ceiling_sixteen_feet">c16\'</string>
    <string name="mold_eight_feet">m8\'</string>
    <string name="mold_twelve_feet">m12\'</string>
    <string name="zero">0</string>
    <string name="stretch_twelve_feet">s12\'</string>
    <string name="stretch_fourteen_feet">s14\'</string>
    <string name="stretch_sixteen_feet">s16\'</string>
    <string name="hyphen_with_space">"-   "</string>
    <string name="half_inch_regular">1/2\" Lite</string>
    <string name="five_eighths_regular">5/8\" Regular</string>
    <string name="half_inch_stretch">1/2\" Stretch</string>
    <string name="five_eighths_stretch">5/8\" Stretch</string>
    <string name="ceiling">Ceilings</string>
    <string name="mold_u">Mold Resist.</string>
    <string name="menu_report">Send Report</string>
    <string name="hint_input_address">Address</string>

    <string name="format_height_charge">%1$s x %2$s @ %3$sft</string>
    
    
    <string name="job_extra_course_screws">"1&#188;\" Coarse Screws - Box"</string>
    <string name="job_extra_dsa20">DSA20 - Carton</string>
    <string name="job_extra_shims">Shims - Bundle</string>
    <string name="job_extra_xcrack">X-Crack - Box</string>
    <string name="job_extra_lite_blue">Proform Lite Blue - Box</string>
    <string name="job_extra__magnum_ap">Magnum AP - Box</string>
    <string name="job_extra_hot_5">"5' Hot Mud - Bag"</string>
    <string name="job_extra_hot_20">"20' Hot Mud - Bag"</string>
    <string name="job_extra_hot_45">"45' Hot Mud - Bag"</string>
    <string name="job_extra_hot_90">"90' Hot Mud - Bag"</string>
    <string name="job_extra__5g_levelcoat">Levelcoat - 5 Gallon</string>
    <string name="job_extra_ultraflex_325">325 Ultraflex - Box</string>
    <string name="job_extra_ultraflex_450">450 Ultraflex - Box</string>
    <string name="job_extra_8_nocoat_90">"8' Nocoat 90° - Box"</string>
    <string name="job_extra_10_nocoat_90">"10' Nocoat 90° - Box"</string>
    <string name="job_extra_8_nocoat_bull">"8' Nocoat Bullnose - Box"</string>
    <string name="job_extra_10_nocoat_bull">"10' Nocoat Bullnose - Box"</string>

    <plurals name="job_report_coarse_screws">
        <item quantity="one">"Box 1&#188;\" Coarse Screw"</item>
        <item quantity="other">"Boxes 1&#188;\" Coarse Screws"</item>
    </plurals>

    <plurals name="job_report_dsa20">
        <item quantity="one">Carton DSA20</item>
        <item quantity="other">Cartons DSA20</item>
    </plurals>
    
    <plurals name="job_report_shims">
        <item quantity="one">Bundle Shim</item>
        <item quantity="other">Bundle Shim</item>
    </plurals>
    
    <plurals name="job_report_xcrack">
        <item quantity="one">Box X-Crack</item>
        <item quantity="other">Boxes X-Crack</item>
    </plurals>
    
    <plurals name="job_report_lite_blue">
        <item quantity="one">Box Proform Lite Blue</item>
        <item quantity="other">Boxes Proform Lite Blue</item>
    </plurals>
    
    <plurals name="job_report_magnum_ap">
        <item quantity="one">Box Magnum AP</item>
        <item quantity="other">Boxes Magnum AP</item>
    </plurals>
    
    <plurals name="job_report_hot_5">
        <item quantity="one">"Bag 5' Hot Mud"</item>
        <item quantity="other">"Bags 5' Hot Mud"</item>
    </plurals>
-
    <plurals name="job_report_hot_20">
        <item quantity="one">"Bag 20' Hot Mud"</item>
        <item quantity="other">"Bags 20' Hot Mud"</item>
    </plurals>

    <plurals name="job_report_hot_45">
        <item quantity="one">"Bag 45' Hot Mud"</item>
        <item quantity="other">"Bags 45' Hot Mud"</item>
    </plurals>

    <plurals name="job_report_hot_90">
        <item quantity="one">"Bag 90' Hot Mud"</item>
        <item quantity="other">"Bags 90' Hot Mud"</item>
    </plurals>

    <plurals name="job_report_levelcoat_5gal">
        <item quantity="one">Pail Magnum Level Coat</item>
        <item quantity="other">Pails Magnum Level Coat</item>
    </plurals>

    <plurals name="job_report_ultraflex_325">
        <item quantity="one">Box Ultraflex 325 Tape</item>
        <item quantity="other">Boxes Ultraflex 325 Tape</item>
    </plurals>

    <plurals name="job_report_ultraflex_450">
        <item quantity="one">Box Ultraflex 450 Tape</item>
        <item quantity="other">Boxes Ultraflex 450 Tape</item>
    </plurals>

    <plurals name="job_report_8ft_nocoat_90">
        <item quantity="one">"Box 8' No-Coat 90°"</item>
        <item quantity="other">"Boxes 8' No-Coat 90°"</item>
    </plurals>

    <plurals name="job_report_10ft_nocoat_90">
        <item quantity="one">"Box 10' No-Coat 90°"</item>
        <item quantity="other">"Boxes 10' No-Coat 90°"</item>
    </plurals>

    <plurals name="job_report_8ft_nocoat_bull">
        <item quantity="one">"Box 8' No-Coat Bullnose"</item>
        <item quantity="other">"Boxes 8' No-Coat Bullnose"</item>
    </plurals>

    <plurals name="job_report_10ft_nocoat_bull">
        <item quantity="one">"Box 10' No-Coat Bullnose"</item>
        <item quantity="other">"Boxes 10' No-Coat Bullnose"</item>
    </plurals>


    <string name="height_charges">Height Charges</string>
    <string name="format_wall_finish">"Wall Finish - %1s"</string>
    <string name="format_ceil_finish">"Ceiling Finish - %1s"</string>
    <string name="format_ceil_square">"Ceiling - %1s Sq. Ft."</string>
    <string name="format_total_square">"Total - %1s Sq. Ft."</string>
    <string name="title_activity_backup">BackupActivity</string>
    <string name="title_activity_tally">TallyActivity</string>
    <string name="menu_lable_job_areas">Job Areas</string>
    <string name="lbl_add_job_area">Add Job Area</string>
    <string name="title_card_half_totals">1/2\" &amp; Ceiling Totals</string>
    <string name="menu_edit_name">Change Name</string>
    <string name="menu_delete">Remove</string>
    <string name="dialog_name_change_title">"Change %1s name?"</string>
    <string name="title_card_half_ceiling_total">1/2\" Lite - Ceilings</string>
    <string name="card_title_half_plus_ceil_total">1/2\" Lite Totals</string>

</resources>
