<android.support.v7.widget.CardView
    android:id="@+id/card_mold"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/mold_u"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:columnCount="3"
            android:rowCount="6"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="0"
                android:padding="1.5dp"
                android:text="@string/eight_feet"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="0"
                android:padding="1.5dp"
                android:text="@string/hyphen_with_space"
                android:textSize="20sp"/>


            <TextView
                android:id="@+id/mold_8_total"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="3dp"
                android:layout_row="0"
                android:padding="1.5dp"
                android:paddingTop="1.5dp"
                android:textSize="20sp"
                tools:text="0"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:layout_row="1"
                android:padding="1.5dp"
                android:text="@string/twelve_feet"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_row="1"
                android:padding="1.5dp"
                android:text="@string/hyphen_with_space"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/mold_12_total"
                android:layout_width="36dp"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginLeft="3dp"
                android:layout_row="1"
                android:padding="1.5dp"
                android:paddingTop="1.5dp"
                android:textSize="20sp"
                tools:text="0"/>

        </GridLayout>



    </LinearLayout>

</android.support.v7.widget.CardView>