<android.support.v7.widget.CardView
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_ceil_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/half_inch_regular"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"/>

        <GridLayout
            android:columnCount="3"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:rowCount="6">

            <TextView
                android:layout_column="2"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_width="wrap_content"
                android:padding="1.5dp"
                android:text="@string/eight_feet"
                android:textSize="20sp"
                />

            <TextView
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_width="wrap_content"
                android:padding="1.5dp"
                android:text="@string/hyphen_with_space"
                android:textSize="20sp"
                />


            <TextView
                android:id="@+id/half_8_total"
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_width="36dp"
                android:padding="1.5dp"
                android:paddingTop="1.5dp"
                android:text="0"
                android:textAlignment="textStart"
                android:textSize="20sp"
                />

            <TextView
                android:layout_column="2"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_width="wrap_content"
                android:padding="1.5dp"
                android:text="@string/nine_feet"
                android:textSize="20sp"
                />

            <TextView
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_width="wrap_content"
                android:padding="1.5dp"
                android:text="@string/hyphen_with_space"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/half_9_total"
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_width="36dp"
                android:padding="1.5dp"
                android:paddingTop="1.5dp"
                android:text="0"
                android:textAlignment="textStart"
                android:textSize="20sp"
                />

            <TextView
                android:layout_column="2"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_width="wrap_content"
                android:padding="1.5dp"
                android:text="@string/ten_feet"
                android:textSize="20sp"
                />

            <TextView
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_width="wrap_content"
                android:padding="1.5dp"
                android:text="@string/hyphen_with_space"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/half_10_total"
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_width="36dp"
                android:padding="1.5dp"
                android:paddingTop="1.5dp"
                android:text="0"
                android:textAlignment="textStart"
                android:textSize="20sp"
                />


            <TextView
                android:layout_column="2"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_width="wrap_content"
                android:padding="1.5dp"
                android:text="@string/twelve_feet"
                android:textSize="20sp"
                />

            <TextView
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_width="wrap_content"
                android:padding="1.5dp"
                android:text="@string/hyphen_with_space"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/half_12_total"
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_width="36dp"
                android:padding="1.5dp"
                android:paddingTop="1.5dp"
                android:text="0"
                android:textAlignment="textStart"
                android:textSize="20sp"
                />


            <TextView
                android:layout_column="2"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_width="wrap_content"
                android:padding="1.5dp"
                android:text="@string/fourteen_feet"
                android:textSize="20sp"
                />

            <TextView
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_width="wrap_content"
                android:padding="1.5dp"
                android:text="@string/hyphen_with_space"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/half_14_total"
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:layout_row="4"
                android:layout_width="36dp"
                android:padding="1.5dp"
                android:paddingTop="1.5dp"
                android:text="0"
                android:textAlignment="textStart"
                android:textSize="20sp"
                />

            <TextView
                android:layout_column="2"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_width="wrap_content"
                android:padding="1.5dp"
                android:text="@string/sixteen_feet"
                android:textSize="20sp"
                />

            <TextView
                android:layout_column="1"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_width="wrap_content"
                android:padding="1.5dp"
                android:text="@string/hyphen_with_space"
                android:textSize="20sp"
                />

            <TextView
                android:text="0"
                android:id="@+id/half_16_total"
                android:layout_column="0"
                android:layout_height="wrap_content"
                android:layout_row="5"
                android:layout_width="36dp"
                android:padding="1.5dp"
                android:paddingTop="1.5dp"
                android:textAlignment="textStart"
                android:textSize="20sp"
                />

        </GridLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>